Update publication titles to use semicolons

--- a/_data/pubs/2020.yml
+++ b/_data/pubs/2020.yml
@@ -36,7 +36,7 @@
 
 - title: "The Issue of Transients in Leakage-Based Model Reference Adaptive Control of Switched Linear Systems"
   authors: T. Tao, S. Roy and S. Baldi
-  venue: Nonlinear Analysis: Hybrid Systems
+  venue: Nonlinear Analysis; Hybrid Systems
   link:
     url: #
     display: Project Page
@@ -61,7 +61,7 @@
   id: sroy
   featured: 1
 
-- title: "Aerial Transportation of Unknown Payloads: Adaptive Path Tracking for Quadrotors"
+- title: "Aerial Transportation of Unknown Payloads; Adaptive Path Tracking for Quadrotors"
   authors: V. Shankaranarayanan, S. Roy and S. Baldi
   venue: IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS 2020), Las Vegas, USA
   link:
@@ -104,7 +104,7 @@
     url: /publications/2020/Simone_Towards-adaptive-autopilots
     display: Project Page
 
-- title: "Reconstruct, Rasterize and Backprop: Dense shape and pose estimation from a single image"
+- title: "Reconstruct, Rasterize and Backprop; Dense shape and pose estimation from a single image"
   authors: Aniket Pokale*, Aditya Aggarwal, Krishna Murthy Jatavallabhula and K. Madhava Krishna
   
   venue:  Conference on Computer Vision and Pattern Recognition (CVPR) Workshops, 2020
@@ -112,7 +112,7 @@
     url: /publications/2020/Aniket_Reconstruct
     display: Project Page
 
-- title: "Cosine meets Softmax: A tough-to-beat baseline for visual grounding"
+- title: "Cosine meets Softmax; A tough-to-beat baseline for visual grounding"
   authors: Nivedita Rufus, Unni Krishnan R Nair, K. Madhava Krishna, and Vineet Gandhi
 
   venue:  European Conference on Computer Vision (ECCV) Workshops (2), 2020
@@ -128,7 +128,7 @@
     url: /publications/2020/Avijit_Dynamic-Target
     display: Project Page
 
-- title: "DeepMPCVS: Deep Model Predictive Control for Visual Servoing"
+- title: "DeepMPCVS; Deep Model Predictive Control for Visual Servoing"
   authors: Pushkal Katara, YVS Harish, Harit Pandya, Abhinav Gupta, AadilMehdi Sanchawala, Gourav Kumar, 
            Brojeshwar Bhowmick and K. Madhava Krishna
 
@@ -145,7 +145,7 @@
     url: /publications/2020/Mylavarapu_Understanding-Dynamic-Scenes
     display: Project Page
 
-- title: "Aerial Transportation of Unknown Payloads: Adaptive Path Tracking for Quadrotors"
+- title: "Aerial Transportation of Unknown Payloads; Adaptive Path Tracking for Quadrotors"
   authors: Viswa N. Sankaranarayanan, Spandan Roy, Simone Baldi
 
   venue: IEEE International Conference on Intelligent Robots and Systems (IROS), 2020
@@ -202,7 +202,7 @@
     url: /publications/2020/Suryavanshi_Omnidirectional
     display: Project Page
 
-- title: "DFVS: Deep Flow Guided Scene Agnostic Image Based Visual Servoing"
+- title: "DFVS; Deep Flow Guided Scene Agnostic Image Based Visual Servoing"
   authors: Y V S Harish, Harit Pandya, Ayush Gaud, Shreya Terupally, Sai Shankar and K. Madhava Krishna
 
   venue: IEEE International Conference on Robotics and Automation (ICRA), 2020
@@ -236,7 +236,7 @@
     url: /publications/2020/Sankaranarayanan_Introducing-Switched
     display: Project Page
 
-- title: "MonoLayout: Amodal scene layout from a single image"
+- title: "MonoLayout; Amodal scene layout from a single image"
   authors: Kaustubh Mani, Swapnil Daga, Shubhika Garg, N. Sai Shankar, J. Krishna Murthy and K. Madhava Krishna
 
   venue: Winter Conference on Applications of Computer Vision, 2020
