--- a/_data/pubs/2021.yml
+++ b/_data/pubs/2021.yml
@@ -16,7 +16,7 @@
   id: sroy
   featured: 1
 
-- title: "Wide-Area Damping Control Resilience towards Cyber-Attacks: A Dynamic Loop Approach"
+- title: "Wide-Area Damping Control Resilience towards Cyber-Attacks; A Dynamic Loop Approach"
   authors: A. Patel, S. Roy and S. Baldi
   venue: IEEE Transactions on Smart Grid
   link:
@@ -158,7 +158,7 @@
   id: mkrishna
   featured: 1
 
-- title: "Followman: Control of Social Person Following Robot*"
+- title: "Followman; Control of Social Person Following Robot*"
   authors: Avijit Kumar Ashe and K. Madhava Krishna
 
   venue:   IEEE Intelligent Vehicles Symposium (IV), 2021
@@ -168,7 +168,7 @@
   id: mkrishna
   featured: 1
   
-- title: "Probabilistic Collision Avoidance For Multiple Robots: A Closed Form PDF Approach"
+- title: "Probabilistic Collision Avoidance For Multiple Robots; A Closed Form PDF Approach"
   authors: Josyula Gopala Krishna, Anirudha Ramesh and K.Madhava Krishna
 
   venue:   IEEE Intelligent Vehicles Symposium (IV), 2021
@@ -180,7 +180,7 @@
 
 ############## ICRA Papers ##########################
 
-- title: "DRACO: Weakly Supervised Dense Reconstruction And Canonicalization of Objects"
+- title: "DRACO; Weakly Supervised Dense Reconstruction And Canonicalization of Objects"
   authors: Rahul Sajnani\*, AadilMehdi Sanchawala\*, Krishna Murthy Jatavallabhula, Srinath Sridhar and K. Madhava Krishna
 
   venue: IEEE International Conference on Robotics and Automation (ICRA), 2021
@@ -200,7 +200,7 @@
 
 ############## ACM Papers ##########################
 
-- title: "RackLay: Monocular Multi-Layered Layout Estimation for Warehouses with Sim2Real Transfer"
+- title: "RackLay; Monocular Multi-Layered Layout Estimation for Warehouses with Sim2Real Transfer"
   authors: Meher Shashwat Nigam\*, Avinash Prabhu\*, Anurag Sahu\*, Tanvi Karandikar, Puru Gupta, 
            N. Sai Shankar, Ravi Kiran Sarvadevabhatla and K. Madhava Krishna
 
@@ -253,7 +253,7 @@
   id: mkrishna
   featured: 0
 
-- title: "Early Bird: Loop Closures from Opposing Viewpoints for Perceptually-Aliased Indoor Environments"
+- title: "Early Bird; Loop Closures from Opposing Viewpoints for Perceptually-Aliased Indoor Environments"
   authors: Satyajit Tourani, Dhagash Desai, Udit Singh Parihar, Sourav Garg, Ravi Kiran Sarvadevabhatla, 
            Michael Milford and K. Madhava Krishna
 
@@ -264,7 +264,7 @@
   id: mkrishna
   featured: 0
 
-- title: "BirdSLAM: Monocular Multibody SLAM in Bird's-Eye View"
+- title: "BirdSLAM; Monocular Multibody SLAM in Bird's-Eye View"
   authors: Swapnil Daga, Gokul B. Nair, Anirudha Ramesh, Rahul Sajnani, Junaid Ahmed Ansari and K. Madhava Krishna. 
 
   venue: International Conference on Computer Vision Theory and Applications (VISAPP), 2021
@@ -283,7 +283,7 @@
     url: /publications/2021/Thatavarthy_A-geometric-approach
     display: Project Page
 
-- title: "Building Facades to Normal Maps: Adversarial Learning from Single View Images"
+- title: "Building Facades to Normal Maps; Adversarial Learning from Single View Images"
   authors: Mukul Khanna\*, Tanu Sharma\*, Ayyappa Swamy Thatavarthy and K. Madhava Krishna
 
   venue: Conference on Robots and Vision (CRV), 2021
@@ -303,7 +303,7 @@
 
 #################### IV Papers #################################
 
-- title: "RTVS: A Lightweight Differentiable MPC Framework for Real-Time Visual Servoing"
+- title: "RTVS; A Lightweight Differentiable MPC Framework for Real-Time Visual Servoing"
   authors: Mohammad Nomaan Qureshi*, Pushkal Katara*, Abhinav Gupta*, Harit Pandya, Harish Y V S,
            AadilMehdi Sanchawala, Gourav Kumar, Brojeshwar Bhowmick, K. Madhava Krishna
 
@@ -324,7 +324,7 @@
   id: mkrishna
   featured: 1
 
-- title: "RoRD: Rotation-Robust Descriptors and Orthographic Views for Local Feature Matching"
+- title: "RoRD; Rotation-Robust Descriptors and Orthographic Views for Local Feature Matching"
   authors: Udit Singh Parihar*, Aniket Gujarathi*, Kinal Mehta*, Satyajit Tourani*, Sourav Garg, 
            Michael Milford, K. Madhava Krishna
   venue:  IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS 2021)
@@ -344,7 +344,7 @@
   id: mkrishna
   featured: 1
 
-- title: "RP-VIO: Robust Plane-based Visual-Inertial Odometry for Dynamic Environments"
+- title: "RP-VIO; Robust Plane-based Visual-Inertial Odometry for Dynamic Environments"
   authors: Karnik Ram*, Chaitanya Kharyal, Sudarshan S. Harithas, K. Madhava Krishna
   venue:  IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS 2021)
   link: # https://robotics.iiit.ac.in//publications/2021/IROS2021_karnik_RP-VIO_et_al.html
